--- a/style.css
+++ b/style.css
@@ -45,9 +45,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .orders {
   margin-top: 20%;
+}
+
+.orders__inner {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   background-color: #ccc;
-  text-align: center;
-  height: auto;
 }
 
 .block {
@@ -74,7 +78,7 @@ h1, h2, h3, h4, h5, h6 {
     align-content: center;
     align-items: center;
     flex: 1 0 auto;
-    width: 370px;
+    min-width: 370px;
     height: 170px;
 
     border-radius: 10px;
